FAGSYSTEM-403562 innvilger fri utsettelse for bfhr uansett hvis eneste gjenværende dager er minsterett, selv om det mangler mors aktivitet avklaring. Lik håndtering som manglende søkt periode (#440)